<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="236dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="Edit details"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"/>
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Band Name:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/name"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Band Location:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/band_location"
                app:layout_constraintEnd_toStartOf="@+id/band_location"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Distance:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/venue_description_final"
                app:layout_constraintEnd_toStartOf="@+id/venue_description_final"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="220dp"
...
                android:text="miles"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/venue_description_final"
                app:layout_constraintStart_toEndOf="@+id/venue_description_final" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start|top"
                android:hint="No genres selected"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:singleLine="false"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <Button
                android:id="@+id/selectGenres"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_rounded_flat_blue"
                android:text="Select Genres"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Email:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/email"
                app:layout_constraintEnd_toStartOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="220dp"
...
                android:maxLength="200"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/venue_description_final" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Phone Number:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/phone"
                app:layout_constraintEnd_toStartOf="@+id/phone"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
...
